Made changes to sucessfully deploy to Azure Linux App Services

--- a/public/home.html
+++ b/public/home.html
@@ -11,6 +11,6 @@
 
 <button id="signOutButton">Sign out and delete the subscription</button>
 
-<script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/client.js"></script>
 </body>
